kubernetes/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wms
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
